# Sisyphus-OS

./: .gitignore  Cargo.toml  README.md  libtest_extern.rlib  patch_thermal_page.sh  rust-toolchain.toml  x86_64-sisyphus-user.json  x86_64-sisyphus.json
kernel/boulder/: Cargo.toml  build.rs  libscratch.rlib  linker.ld  scratch.rs
kernel/boulder/drivers/reference/: reference_driver.c
kernel/boulder/include/sisyphus/: driver-contract.md  driver.h  gpu.h
kernel/boulder/src/: ads_boundary.rs  aether.rs  argus_sentinel.rs  axiom_manifold.rs  birkhoff_vn.rs  blacklab.rs  blacklab_bootstrap.rs  blacklab_control_plane.rs  blacklab_hooks.rs  bootstrap.S  bootstrap_chronal.rs  capability.rs  cassandra_reactor.rs  causal_lattice.rs  cech_h1.rs  charybdis_dma_firewall.rs  chronovore.rs  cluster_quiver.rs  commit_reactor.rs  continuity_vault.rs  counterfactual.rs  cyclotomic_ntt.rs  divergence_vault.rs  driver_mitosis.rs  drivernet_host.rs  er_epr_memory.rs  fabric.rs  fabric_weave.rs  fiedler_cut.rs  formal_attestation.rs  futamura.rs  ghost_chronicle.rs  hodge_cech.rs  ignition.rs  kairos.rs  kardashev_governor.rs  lab_capsule.rs  lease_lattice.rs  lib.rs  main.rs  (+47 more)
kernel/boulder/src/arch/: mod.rs  x86_64.rs
kernel/boulder/src/boot/: acpi.rs  mod.rs  multiboot2.rs
kernel/boulder/src/certified_math/: bridge.rs  certificate.rs  density.rs  exact_ntt.rs  hodge_implicit.rs  mod.rs  persistent.rs  primal_dual.rs  runtime.rs  sheaf.rs  symplectic.rs  tropical.rs
kernel/boulder/src/cpu/: mod.rs  schrodinger.rs  topology.rs  tsx.rs  watchdog.rs
kernel/boulder/src/drivers/: device_census.rs  firmware_display.rs  gpu_portability.rs  hermes_dma.rs  hermes_gsp.rs  hermes_platform.rs  hermes_service.rs  mod.rs  morphogenetic.rs  net.rs  xhci.rs  xhci_dma.rs  xhci_iommu.rs  xhci_ports.rs  xhci_protocol.rs  xhci_ring.rs  xhci_runtime.rs  xhci_takeover.rs
kernel/boulder/src/fs/: mod.rs  thermo_vfs.rs  void_fs.rs  voidfs.rs
kernel/boulder/src/hw/: hotplug.rs  iommu.rs  iova.rs  mod.rs  pci.rs  typestate.rs  vtd.rs  vtd_backend.rs  vtd_memory.rs  vtd_slpt.rs
kernel/boulder/src/interrupts/: apic.rs  exceptions.rs  idt.rs  ioapic.rs  irq.rs  mod.rs  neuromorphic.rs  pic.rs  stubs.S  synaptic.rs
kernel/boulder/src/ipc/: alchemy.rs  forge_ring.rs  macrophage.rs  mod.rs  topology.rs  wormhole.rs
kernel/boulder/src/memory/: fractal.rs  frame_pool.rs  holographic.rs  laminar.rs  lorenz_vmm.rs  mod.rs  mycelium.rs  ricci_flow.rs  synapse_alloc.rs  transaction.rs
kernel/boulder/src/mirage/: hermes_foreign_codec.rs  hermes_morphic_abi.rs  hermes_prometheus.rs  irq_reflector.rs  jit_linker.rs  mod.rs  morphic_x86_64.rs  personality.rs  transaction.rs
kernel/boulder/src/module/: elf.rs  elf_headers.rs  foreign_elf.rs  loader.rs  mod.rs  pe_loader.rs  relocator.rs
kernel/boulder/src/predictive_control/: barrier.rs  conformal.rs  dictionary.rs  hash.rs  mod.rs  mpc.rs  rls.rs  runtime.rs  state.rs  transcript.rs
kernel/boulder/src/process/: cellular_spawn.rs  context.rs  image.rs  install.rs  lifecycle.rs  mod.rs  preemption.rs  x86_64.rs
kernel/boulder/src/scheduler/: eigenthread.rs  hydra.rs  mod.rs  quantum.rs  rtos.rs  symbiosis.rs
kernel/boulder/src/shim/: abyss_allocator.rs  host.rs  linux_kpi.rs  mod.rs  module.rs  polymorphic_vtable.rs  services.rs
kernel/boulder/src/syscalls/: spectral_router.rs
kernel/boulder/src/tensor_decomp/: cp.rs  einsum.rs  fixed.rs  hooi.rs  hosvd.rs  linalg.rs  mod.rs  multilinear.rs  network.rs  ops.rs  optim.rs  telemetry.rs  tensor.rs  tt.rs  tucker.rs
userland/crest/: Cargo.toml  build.rs
userland/crest/src/: cerebral.rs  compositor.rs  heliosphere.rs  input.rs  lib.rs  main.rs  manifold.rs  obsidian.rs  orbital_cortex.rs  quantum_aura.rs  quantum_desktop.rs  quantum_focus.rs  quantum_frame_oracle.rs  quantum_portal.rs  quantum_scene.rs  quantum_tile_field.rs  retinal_burn.rs
userland/push/: Cargo.toml  build.rs  linker.ld
userland/push/src/: aegis.rs  chronos.rs  gordian.rs  lib.rs  logger.rs  main.rs  morpheus.rs  noosphere.rs  service.rs
(+189 files in other folders)
