[package]
name = "boulder"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
build = "build.rs"

[features]
default = ["reference-driver"]
reference-driver = []
kernel-bin = []
# Quarantined until real scheduler, thermal, resonance, and fault adapters exist.
unfinished-quantum-nexus = []

[dependencies]
aether = { path = "../../core/aether" }
abyss = { path = "../../core/abyss" }
blacklab = { path = "../../core/blacklab" }
kairos = { path = "../../core/kairos" }
sisyphus-driver-abi = { path = "../../libraries/driver-abi" }
slope = { path = "../../libraries/slope" }
libm = "0.2.16"

[lib]
path = "src/lib.rs"

[[bin]]
name = "boulder"
path = "src/main.rs"
required-features = ["kernel-bin"]
test = false
bench = false

[lints]
workspace = true
