[package]
name = "crest"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[features]
os-bin = []

[dependencies]
slope = { path = "../../libraries/slope" }

[lib]
path = "src/lib.rs"

[[bin]]
name = "crest"
path = "src/main.rs"
required-features = ["os-bin"]
test = false

[lints]
workspace = true
